# galachain-examples

./: .gitignore  README.md
bevy-game/: Cargo.toml
bevy-game/src/: main.rs
burn-to-vote/: README.md  package-lock.json  package.json
burn-to-vote/src/: App.vue
dapp-template/: .gitignore  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
dapp-template/src/: App.vue
dev-server/: .env.example  README.md  package-lock.json  package.json
dev-server/start/: env.ts  kernel.ts  routes.ts
electron-desktop-application/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron-desktop-application/src/: main.ts  preload.ts  renderer.ts
private-data-commit-reveal-protocol/: README.md  api-config.json  package-lock.json  package.json
private-data-commit-reveal-protocol/e2e/: api.spec.ts  cli.spec.ts  product.spec.ts
private-data-commit-reveal-protocol/src/: index.ts
react-next-client/: .env.example  server.js
react-vite-client/: README.md  index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
react-vite-client/src/: App.tsx  entry-client.tsx  entry-server.tsx  env.d.ts
resources/: README.md
tic-tac-contract/: README.md  tsconfig.json
tic-tac-contract/client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
tic-tac-contract/server/: package.json
tic-tac-contract/tictac-chaincode/: api-config.json  package.json
tictactoe/: package-lock.json  package.json  vite.config.ts
tictactoe/client/: .env_template  (+3 more)
(+95 files in other folders)
